# vinyldb

./: .gitignore  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
src/: config.rs  ctx.rs  data_types.rs  error.rs  expr.rs  lib.rs  logical_plan.rs  main.rs  meta_cmd.rs  schema.rs  sqllogictest.rs  storage_engine.rs  utils.rs
src/catalog/: catalog.rs  column.rs  error.rs  mod.rs  schema.rs  vinyl_table.rs
src/data/: mod.rs  tuple.rs  types.rs
src/physical_plan/: create_table.rs  describe_table.rs  explain.rs  filter.rs  insert.rs  limit.rs  mod.rs  one_row_placeholder.rs  projection.rs  show_tables.rs  table_scan.rs  tuple.rs
src/plan/: create_table.rs  datatype.rs  error.rs  explain.rs  explain_table.rs  expr.rs  insert.rs  mod.rs  object_name_to_table_name.rs  op.rs  query.rs  show_tables.rs  value2data.rs  values2tuples.rs
src/repl/: highlighter.rs  mod.rs  prompt.rs  table.rs
src/repl/data/sled/: db
src/storage_engine/: mod.rs  page.rs  table.rs
tests/: create_table.slt  describe_table.slt  explain.slt  insert.slt  query.slt  script.slt  show_tables.slt  sqllogictest.rs
