[package]
name = "vinyldb"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.5.0"
camino = "1.1.6"
colored = "2.1.0"
derive_more = "0.99.17"
indexmap = "2.2.5"
log = "0.4.21"
pretty_assertions = "1.4.0"
sled = "0.34.7"
reedline = "0.30.0"
sqlparser = "0.43.1"
strum = "0.26.1"
strum_macros = "0.26.1"
sqllogictest = "0.19.1"
bytemuck = "1.14.3"
derive_builder = "0.20.0"
crossterm = "0.27.0"
reedline_sql_highlighter = "0.1.0"
comfy-table = "7.1.0"

[dev-dependencies]
camino-tempfile = "1"
